# upanime

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
api/: go.mod  go.sum  main.go
api/auth/: codes.go  codes_test.go  geo.go  mailer.go  service.go  service_test.go  token.go  token_test.go
api/config/: config.go
api/db/: db.go
client/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: ml-dataset.md
ml/: Dockerfile  deploy.sh  docker.env.example  pyproject.toml  teacher_probe.py
ml/src/upanime_teacher/: cli.py  config.py  frames.py  photometric.py  service.py  sink.py  tagger.py  teacher.py
ml/tests/integration/: test_sink_integration.py
ml/tests/unit/: test_teacher_unit.py
scraper/: browser.py  main.py  pyproject.toml
worker/: .dockerignore  Dockerfile  deploy.sh  docker.env.example  pyproject.toml  version.json
worker/experiments/: effects_comp.py
worker/src/upanime_worker/: callbacks.py  config.py  downscale.py  effects.py  handler.py  interpolation.py  models.py  quality_pipeline.py  r2_storage.py  service.py  tagger.py  temporal.py
worker/tests/integration/: test_container_files_integration.py  test_service_integration.py
worker/tests/unit/: test_apisr_unit.py  test_callbacks_unit.py  test_container_files_unit.py  test_downscale_unit.py  test_effects_log_unit.py  test_effects_unit.py  test_encode_command_unit.py  test_interpolation_unit.py  test_service_unit.py  test_temporal_unit.py
(+225 files in other folders)
