[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "upanime-worker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37",
    "numpy>=1.24",
    "opencv-python-headless>=4.10",
    "pydantic>=2.10",
    "realesrgan>=0.3.0",
    "requests>=2.31",
    "runpod>=1.7",
    "spandrel>=0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
